confluent-kubernetes/confluent-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: confluent-ingress
  namespace: confluent
spec:
  rules:
  - host: infologistix-cnc.ddnss.org
    http:
      paths:
      - path: /
        backend:
          serviceName: controlcenter-0-internal
          servicePort: 9021
